Revert "Fixed the search box gap."
This reverts commit 71fe86aa06ca8a6ef6065c70982e73a8af61aa5e.

--- a/scouterna/style.css
+++ b/scouterna/style.css
@@ -360,7 +360,6 @@ blockquote{
 	color:#fff;
 	padding:0 3px 1px 3px;
 	text-transform:uppercase;
-  margin-left: -1px;
 }
 .gcs_searchform #searchsubmit {	
 	background:url(images/bg-submit-repeatable.png) repeat-x;
